[package]
name = "child-of"
version = "1.0.3"
edition = "2021"
authors = ["Denis535"]
description = "The library that allows you to make one struct a child of another."
repository = "https://github.com/Denis535/Rust.Libraries/tree/main/child-of"
readme = "../README.md"
license = "MIT"
categories = ["rust-patterns", "development-tools"]
keywords = ["OOP", "inheritance", "child", "extends", "base"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = { version = "1" }
proc-macro2 = { version = "1" }
